--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="台北市最新災害專案的災情資料查詢">
     <meta property="og:site_name" content="台北市最新災害專案的災情資料查詢">
+    <meta property="og:url" content="https://allen79yu.github.io/disaster-display/build/">
     <meta property="og:description" content="查詢台北市最新災害專案的災情資料，前端實作open data查詢平台。">
     <meta property="og:locale" content="zh_TW">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGUFHnAPKxvyWmWOCguvN3lRL3Banabuc"></script>
@@ -18,10 +20,10 @@
 </body>
 <script>
     (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-82825897-2', 'auto');
